Update apend_a.tex, Hyperplan_halvrum_polyeder.tex, and 8 more files...

--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -107,7 +107,7 @@ Hyperplanerne på figur \ref{fig:nej3} danner dermed polygonen, og fællesmængd
 %
 %Et polyhedron er derfor en samling af polyeder der til sammen skaber en geometrisk figur i et givet vektorrum.
 %
-Sætning \ref{thm:juliexd} beskriver, hvornår en vektor er  ortogonal med et hyperplan. 
+\ref{thm:juliexd} beskriver, hvornår en vektor er  ortogonal med et hyperplan. 
 %
 \begin{thm}{}{juliexd}
 Lad $\mathbf{a}$ være en vektor i $\R^n$, hvor 
