--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -37,7 +37,7 @@ Det konvekse hylster af vektorerne er på figuren markeret med blå.
 %
 \input{fig/tikz/geometri/konveks_eks_r3}
 %
-Af \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
+Af \ref{defn:konvekskombihylster} følger \ref{thm:konveks}.
 %
 \begin{thm}{}{konveks}
 \begin{enumerate}[label=(\alph*)]
