--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -46,7 +46,7 @@ Dermed er det vist, at (b) og (c) er ækvivalente.
 \end{proof}\\
 %
 Med udgangspunkt i betingelsers tilsvarende vektorer kan givne betingelser siges at være lineært uafhængige, hvis de tilsvarende vektorer er lineært uafhængige.
-Med dette og sætning \ref{thm:betingi}(a) kan hjørnepunkterne defineres som mulige løsninger, hvor $n$ lineært uafhængige betingelser er bindende.
+Med dette og \ref{thm:betingi}(a) kan hjørnepunkterne defineres som mulige løsninger, hvor $n$ lineært uafhængige betingelser er bindende.
 Bemærk, at alle betingelser skal være opfyldt, for at et givent punkt kan være en mulig løsning, samt at et punkt ikke behøver at opfylde alle betingelser for at kunne have $n$ bindende betingelser.
 %
 \begin{defn}{}{basal}
