--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -6,11 +6,11 @@ Dette korresponderer med polyeder, der ligeledes kan opskrives på standardform:
 $\mathcal{P}=\{ \mathbf{x} \in \R^n  \mid  A\mathbf{x}=\mathbf{b}, \mathbf{x} \geq \mathbf{0} \}$, hvor er $A$ er en $m \times n$ matrix.
 $\mathcal{P}$ er her et \textit{polyeder på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
-I sætning \ref{thm:julieerfantalastisk} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
+I \ref{thm:julieerfantalastisk} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
 Som det ses i \ref{defn:basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
 Såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $\textbf{x}_i$ med henblik på, at sætte disse $\textbf{x}_i=0$, hvilket gør begrænsningerne $\textbf{x}_i \geq 0$ aktive.
 %ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
-Det er dog ikke uvæsentligt, hvilke af disse variable der omdannes til $0$ hvilket belyses af sætning \ref{thm:polystd}.
+Det er dog ikke uvæsentligt, hvilke af disse variable der omdannes til $0$ hvilket belyses af \ref{thm:polystd}.
 %
 \begin{thm}{}{polystd}
 Ved begrænsningerne $A\textbf{x}=\mathbf{b}$ og $\textbf{x}\geq 0$.
@@ -32,7 +32,7 @@ $$\sum_{i=1}^{m}\textbf{A}_{B(i)}\textbf{x}_{B(i)}=\sum_{i=1}^{n}\textbf{A}_ix_i
 Da søjlerne $\textbf{A}_{B(i)}$ for $i=1,\ldots,m$ er lineært uafhængige, kan $\textbf{x}_{B(1)},\ldots,\textbf{x}_{B(m)}$ bestemmes entydigt. 
 Altså har ligningssystemet skabt af de aktive begrænsninger en entydig løsning.
 %x_{B(i)} fra "da søjlerne ..." 
-Jævnfør sætning \ref{thm:betingi},
+Jævnfør \ref{thm:betingi},
 % Ved ikke om denne reference er rigtig xD
 følger det, at der er $n$ aktive begrænsninger, hvoraf $\mathbf{x}$ er en basal løsning. 
 \\\\
@@ -57,7 +57,7 @@ Da $k \leq m$ gælder det, hvis $i \neq B(1),\ldots,B(m)$, at $i \neq B(1),\ldot
 %der skal flere igennem det her bevis, tænker det er svært for andre end mig.
 \\
 \noindent
-Som følge af sætning \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af følgende procedure.
+Som følge af \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af følgende procedure.
 \begin{enumerate}
 \item Vælg $m$ lineært uafhængige søjler $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}.$
 \item Lad $\textbf{x}_i=0$ for $i \neq B(1),\ldots,B(m).$
