--- a/incl/main/grafisk_losning/reprasentation.tex
+++ b/incl/main/grafisk_losning/reprasentation.tex
@@ -3,7 +3,7 @@
 Et polyeder har indtil videre i nærværende rapport været defineret ved uligheder. 
 I dette afsnit introduceres et alternativ til dette. 
 Det vises, at et begrænset polyeder kan repræsenteres som et konvekst hylster af dets ekstremumspunkter. 
-Dette er givet ved sætning \ref{thm:begraenspoly}. 
+Dette er givet ved \ref{thm:begraenspoly}. 
 %%%%
 \begin{thm}{}{begraenspoly}
 Et ikke-tomt og begrænset polyeder er givet ved det konvekse hylster af dets ekstremumspunkter.
