--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -267,7 +267,7 @@ være den reducerede trappeform af
 $[A \text{    } | \mathbf{b}]$.
 Eftersom $A$ har rangen $m$, følger det, at der ikke findes en nulrække i $B$.
 Derfor kan $[B \text{    } \mathbf{c}]$ ikke indeholde en nulrække, hvis eneste nulindgang er i sidste søjle. 
-Det følger derfor jævnfør sætning \ref{thm:konsistens}, at $A\mathbf{x}=\mathbf{b}$ er konsistent $\forall \mathbf{b}$, hvilket beviser at (b) og (c) er ækvivalente.
+Det følger derfor jævnfør \ref{thm:konsistens}, at $A\mathbf{x}=\mathbf{b}$ er konsistent $\forall \mathbf{b}$, hvilket beviser at (b) og (c) er ækvivalente.
 %
 \end{proof}
 \\
