--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -133,7 +133,7 @@ Lad $C=[\textbf{c}_1 \text{ } \textbf{c}_2 \text{ } \ldots \text{ } \textbf{c}_p
 $C$ er dermed en $ k \text{ } \times \text{ } p$ matrix, hvorom det gælder at $AC=B$.
 Antag nu er der for nogle vektorer $\textbf{x}$ i $\R^p$ gælder $C\textbf{x}=\textbf{0}$. 
 Så er $B\textbf{x}=AC\textbf{x}=\textbf{0}$. 
-Men da søjlerne af $B$ er lineært uafhængige følger det af sætning \ref{thm:mxlinuaf} at $\textbf{x}=\textbf{0}$.
+Men da søjlerne af $B$ er lineært uafhængige følger det af \ref{thm:mxlinuaf} at $\textbf{x}=\textbf{0}$.
 Af samme sætning haves det så at søjlerne af $C$ er lineært uafhængige vektorer i $\R^k$.
 Da en mængde af vektorer i $\R^k$ med mere en k vektorer er lineært afhængig, haves det at $p\leq k$. 
 Vendes rollerne af baserne om, haves $k \leq p$. 
