Update apend_a.tex, Konvekse_maengder.tex, and 8 more files...

--- a/incl/main/appendicer/apend_a.tex
+++ b/incl/main/appendicer/apend_a.tex
@@ -29,9 +29,9 @@ Lad $R$ være en $m \times n$ matrix på reduceret trappeform. Så gælder følg
 \item Den $j$'te pivotsøjle i $R$ er den $j$'te standard i $\R^m$, $\textbf{e}_j$, og derfor er pivotsøjlerne i $R$ lineært uafhængige. 
 \item Antag at $\textbf{r}_j$ ikke er en pivotsøjle i $R$, og at der er $k$ pivotsøjler i $R$ før $\textbf{r}_j$. Så gælder det, at $\textbf{r}_j$ er en linearkombination af de $k$ forudgående pivotsøjler og koefficienterne er de $k$-første indgange i $\textbf{r}_j$. 
 \end{enumerate}
-
+%
 Det forudgående kan opskrives som følgende sætning, som bruges til bevis \ref{entydigbevis}.
-
+%
 \begin{thm}{}{pivotu}
 Følgende udsagn er sande for enhver matrix $A$: 
 \begin{enumerate}[label=(\alph*)]
@@ -39,12 +39,13 @@ Følgende udsagn er sande for enhver matrix $A$:
 \item Enhver ikke-pivotsøjle i $A$ er en linarkombination af den forrige pivotsøjle i A, hvor koefficienterne i linearkombinationen er indgangene i den tilsvarende søjle i den reducerede trappeform af $A$. 
 \end{enumerate} 
 \end{thm}
-
+%
 \begin{thm}{}{entydig}
 Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdannet til en entydig matrix på reduceret trappeform.
 \end{thm}
 %
-\begin{proof}\label{entydigbevis}
+\begin{proof}
+\label{entydigbevis}
 I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform. \\\\
 Lad $A$ væære en matrix og $R$ være den reduceret trappeform af $A$. 
 Udfra egenskab (a), så gælder det, at en søjle i $R$ er en pivotsøjle i $R$, hvis og kun hvis, den er ikke-nul og ikke er en linearkombination af de forudgående pivotsøjler i $R$. 
