--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -47,7 +47,6 @@ Begreber og sætninger, der er nødvendige for simplexmetoden, forefindes ligele
 Kapitlet indeholder en beskrivelse af samt bevis for simplexmetoden som løsningsalgoritme.
 \end{itemize}
 %
-Foruden ovennævnte kapitler findes $???$ bilag slutteligt i denne rapport.
-%Har vi bilag eller ej? 
+Foruden ovennævnte kapitler findes bilag slutteligt i denne rapport.
 Kilder til indholdet af de enkelte afsnit angives i starten af hvert afsnit. 
 Alt i afsnittet er således fra disse kilder, medmindre andet er angivet. 
