--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -45,19 +45,20 @@ Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
 %
 %
 \begin{proof}
-(a)
-Udsagnet følger af \ref{defn:mxinvers}. 
-\\\\
-(b) Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
+\begin{enumerate}[label=(\alph*)]
+\item Udsagnet følger af \ref{defn:mxinvers}. 
+%
+\item Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
 Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
 Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$.
 Dermed er $AB^{-1}=A^{-1}B^{-1}$.
-\\\\
-(c) Antag at A er invertibel. 
+%
+\item Antag at A er invertibel. 
 Det følger fra \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
 Jævnfør \ref{thm:mxmulti}(g) følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
 Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
+\end{enumerate}
 \end{proof}\\
 %
 %NOGET OM ELEMENTÆRE MATRICER OG INVERTIBILITET
