--- a/incl/main/indledning/forord.tex
+++ b/incl/main/indledning/forord.tex
@@ -18,7 +18,7 @@ Der skal lyde en tak til vores vejleder Horia Cornean, og vores bi-vejleder Maik
 \begin{minipage}[b]{0.45\textwidth}
 \begin{center}
 \begin{tabular}{l}
-\phantom{Julieervirkeligdejligogsødogsmuk} \\
+\phantom{Julie er virkelig dejlig, sød og smuk} \\
 \\
 \\
 \hline
