Update 1.tex, 11.tex, and 2.tex

--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -1,4 +1,13 @@
 \section*{1. Graf for funktion}
+\textbf{Opgavebeskrivelse:}
+\begin{color}{AAUblue2}
+%
+Tegn grafen for funktionen $f(x)$ fra (1) for forskellige valg af parametrene $h_0$ og $\lambda$.
+Forsøg at forklare hvilken effekt parametrene har på kurvens form.
+% 
+\end{color}
+\\\\
+%
 Kode implementeringen finde i appendix \ref{app:1.1}.
 % 
 Ændringer i $h_0$ viser sig kun at ændre på højden af kædelinjen, men påvirker ikke selve kædens form. 
