--- a/CSB/incl/main/1.tex
+++ b/CSB/incl/main/1.tex
@@ -1,5 +1,10 @@
 \chapter{Det hængende kabel}
 % God arbejdslyst xD
+\begin{color}{AAUblue2}
+%
+Denne delopgave giver en grundlæggende forståelse for kvadraturregler.
+% 
+\end{color}
 \input{incl/main/11}
 \input{incl/main/12}
 \input{incl/main/13}
