--- a/CSB/incl/main/2.tex
+++ b/CSB/incl/main/2.tex
@@ -58,6 +58,14 @@ Så findes Lagrange interpolation polynomium. Så opskrives parametrene og funkt
 \textbf{Opgavebeskrivelse:} Lav en grafisk undersøgelse af fejlen $\lvert f(x)-p_N(x) \rvert$, for en række forskellige værdier af N baseret på en modificeret udgave af \textsc{Interpolation bin.py.}
 \\
 \textbf{Besvarelse:} Man kan se, at approximationen passer til funktionen, når N = 15,30 og 45. Hvis der indsættes andre værdier, eksempelvis 16, 31 og 46 kan der ses, at der opstår store udsving i yderpunkterne i definitionsmængden [0,3], hvilket også stemmer overens med forlæsningsnoterne fra kursusgang 5(s.4-5) hvor der kan ses, at Runge har bevist, at yderpunkterne divergerer.
+%
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.9]{code/del2}
+\end{center}
+\caption{Fisk.}
+%
+\end{figure} 
 %%%%%%%%%%% OPGAVE 5 %%%%%%%%%%%
 \section*{Opgave 5}
 \textbf{Opgavebeskrivelse:} Brug Theorem 16 i afsnit 6.2 i [1] til at lave en teoretisk vurdering af fejlen
@@ -104,6 +112,7 @@ Hvor kommer problemerne fra?
 I den forbindelse kan I inddrage den grafiske undersøgelse fra punkt 4.
 \\
 \textbf{Besvarelse:} Den teoretiske fejl (max) bliver $10^{-10}$ ved $N=48$, men i det numeriske eksperiment bliver fejlen aldrig mindre eller lig $10^{-10}$. Det problematiske er divergens i yderpunkterne, hvilket gør fejlen betydeligt større end den teoretiske, da de går mod $ \infty $ og $ - \infty $. Disse divergenspunkter kan også ses på grafen af $f(x)$ og $p(x)$. 
+%
 %%%%%%%%%%% OPGAVE 7 %%%%%%%%%%%
 \section*{Opgave 7}
 \textbf{Opgavebeskrivelse:} Gentag undersøgelserne af den maksimale fejl og sammenlign med den teoretiske vurdering ved at bruge decimalaritmetik-scriptet \textsc{Interpolation dec.py}. 
