Update forord.tex, indledning.tex, and 2 more files...

--- a/incl/main/indledning/forord.tex
+++ b/incl/main/indledning/forord.tex
@@ -1,10 +1,11 @@
-\chapter{Forord}
-Nærværende rapport er udarbejdet af seks 2. semester studerende på bacheloruddannelsen Matematik på Aalborg Universitet. 
-Rapporten er udarbejdet fra 3 februar til 27 maj 2020.
+\chapter*{Forord}
+\addcontentsline{toc}{chapter}{\phantom{lol.}Forord}
+Nærværende rapport er udarbejdet af seks studerende på andet semester  på bacheloruddannelsen Matematik på Aalborg Universitet. 
+Rapporten er udarbejdet fra 3. februar til 27. maj 2020.
 % 
-Temaet for projektet er optimering, herunder mere specifikt lineære programmering.
+Temaet for projektet er optimering, herunder mere specifikt lineær programmering.
 %
-Formålet med rapporten er at få en forståelse for optimeringsmetoder, samt at formulere os mere matematisk præcis.
+Formålet med rapporten er at få en forståelse for optimeringsmetoder, samt at formidle mere matematisk præcist.
 % 	
 Rapporten er nummereret i afsnit, definitioner, figurer m.m.
 Beviser afsluttes med $\square$, der indikerer, at beviset er gennemført.
