--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,6 +1,6 @@
 \chapter{Lineær algebra}
 %
-For at kunne behandle et optimeringsproblem, undersøges først en række universelle begræber indenfor lineær algebra, der er anvendelige i forbindelse med problemet.
+For at kunne behandle et optimeringsproblem, undersøges først en række elementære begreber indenfor lineær algebra, der er anvendelige i forbindelse med problemet.
 Dette kapitel tager udgangspunkt i \citep[side 3-188 og 227-259]{lial}, hvis ikke andet er angivet.
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
