--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -1,11 +1,9 @@
 \section{Matricer og vektorer}
-%  
-% Noget indledningsvist - hvorfor er matricer/vektorer vigtige? 
 %
 I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at introducere \textit{matricer} og tilhørende notation. 
 %
 \begin{defn}{}{}
-En \textbf{matrix} er en rektangulær tabel, hvis elementer er \textbf{skalarer}, hvor $k \in \R$. 
+En \textbf{matrix} er en rektangulær tabel, hvis elementer er \textbf{skalarer} $c \in \R$. 
 En matrix med $m$ \textbf{rækker} og $n$ \textbf{søjler} har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk, noteret $n \times n$.
 Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes den $(i,j)$'te-indgang i matricen. 
@@ -35,7 +33,7 @@ Enhver række $i$ eller søjle $j$ kan betragtes som en \textit{vektor}.
 En matrix med én række kaldes en \textit{rækkevektor}, og en matrix med én søjle kaldes en \textit{søjlevektor}. 
 Med mindre andet er angivet opereres der med søjlevektorer.
 I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{u}$ og $\textbf{v}$. 
-Søjlevektorer noteres ofte med et indeks tilsvarende søjlen i matricen, eksempelvis:
+Søjlevektorer fra matricer med flere end én søjle noteres ofte med et indeks tilsvarende søjlen i matricen, eksempelvis:
 %
 $$
 \textbf{a}_j= 
@@ -43,6 +41,6 @@ $$
 a_{1,j} \\
 a_{2,j} \\
 \vdots \\
-a_{i,j} \\
+a_{m,j} \\
 \end{bmatrix}.
 $$ 
